--- a/download.html
+++ b/download.html
@@ -164,8 +164,8 @@
 			 <p>Цифровые образовательные ресурсы для выполнения задания:
           <ul class="list_link">
           <li><a href="assets/pdf/zadaniya/УМК «Живая физика» руководство.pdf" target="_blank">Руководство к заданию</a></li>
-		<li><a href="assets/pdf/dlya skachivanya/УМК Живая Физика.zip">Скачать УМК «Живая физика»</a></li>
-   <li><a href="assets/pdf/dlya skachivanya/Живая физика учебные материалы .rar">«Живая физика» учебные материалы</a></li>
+		<li><a href="https://drive.google.com/file/d/13rrzNSYOCqc148vRcWG9e2IngpetV8_4/view?usp=drive_link">Скачать УМК «Живая физика»</a></li>
+   <li><a href="https://drive.google.com/file/d/1QgKAmWkkyseWsgoKjskhu_amMVqBzB_G/view?usp=drive_link">«Живая физика» учебные материалы</a></li>
          </ul>
 </p>
         </div>
