--- a/library.html
+++ b/library.html
@@ -54,35 +54,35 @@
       <h1 class="title">Библиотека</h1>
       <div class="grid">
         <div class="grid__item">
-          <a href="assets/pdf/dlya skachivanya/Учебные видеоролики.rar" download>
+          <a href="https://drive.google.com/drive/folders/1e8R08lVUiBvstn262s4mOMyy5cb7pyCa?usp=drive_link" download>
             <!-- Меняестя название и картинка книги, также ссылка на материал -->
             <div class="link-img"><img src="assets/img/i3.webp" alt=""></div>
             <p class="link__text">Учебные видеоролики</p>
           </a>
         </div>
         <div class="grid__item">
-          <a href="assets/pdf/dlya skachivanya/Книги информационно-коммуникационные технологии в образовании.rar" target="_blank" download>
+          <a href="https://drive.google.com/file/d/1j2EJmyJc7mhT0mN4jGrKhPeeFXpyOUqd/view?usp=drive_link" target="_blank" download>
             <!-- Меняестя название и картинка книги, также ссылка на материал -->
             <div class="link-img"><img src="assets/img/i2.webp" alt=""></div>
             <p class="link__text">Электронные книги для изучения информационно-коммуникационных технологий в образовании</p>
           </a>
         </div>
         <div class="grid__item">
-          <a href="assets/pdf/dlya skachivanya/УМК Живая Физика.zip" download>
+          <a href="https://drive.google.com/file/d/13rrzNSYOCqc148vRcWG9e2IngpetV8_4/view?usp=drive_link" download>
             <!-- Меняестя название и картинка книги, также ссылка на материал -->
             <div class="link-img"><img src="assets/img/i.webp" alt=""></div>
             <p class="link__text">УМК Живая физика</p>
           </a>
         </div>
 		  <div class="grid__item">
-          <a href="assets/pdf/dlya skachivanya/Живая физика учебные материалы .rar" download>
+          <a href="https://drive.google.com/file/d/1QgKAmWkkyseWsgoKjskhu_amMVqBzB_G/view?usp=drive_link" download>
             <!-- Меняестя название и картинка книги, также ссылка на материал -->
             <div class="link-img"><img src="assets/img/i.webp" alt=""></div>
             <p class="link__text">УМК Живая физика учебное пособие</p>
           </a>
         </div>
         <div class="grid__item">
-          <a href="assets/pdf/dlya skachivanya/Конструктор сайтов.rar" download>
+          <a href="https://drive.google.com/file/d/1Bx1EwC6_VLWtbeRdhsmUwZvijY83_P1r/view?usp=drive_link" download>
             <!-- Меняестя название и картинка книги, также ссылка на материал -->
             <div class="link-img"><img src="assets/img/i4.webp" alt=""></div>
             <p class="link__text">Конструктор сайтов</p>
